Reduce minimum version even more, compile with java 17 on workflow

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
-loader_version=0.15.10
+# I chose 1.18.2 because it uses Java 17.
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.4
+loader_version=0.15.6
 
-# Mod Properties
-mod_version=1.0.0
+mod_version=1.0.1
 maven_group=dev.xirreal
 archives_base_name=nsight-loader
 
 # Dependencies
-fabric_version=0.97.8+1.20.6
+fabric_version=0.77.0+1.18.2
