--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,8 @@ jobs:
   build:
     strategy:
       matrix:
-        # Use these Java versions
         java: [
-          21,    # Current Java LTS
+          17,
         ]
     runs-on: ubuntu-22.04
     steps:
@@ -30,7 +29,7 @@ jobs:
       - name: build
         run: ./gradlew build
       - name: capture build artifacts
-        if: ${{ matrix.java == '21' }} # Only upload artifacts built from latest java
+        if: ${{ matrix.java == '17' }}
         uses: actions/upload-artifact@v4
         with:
           name: Artifacts
